<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface">

    <!-- ViewPager for onboarding slides -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboarding_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Left Navigation Button -->
    <FrameLayout
        android:id="@+id/btn_previous"
        android:layout_width="88dp"
        android:layout_height="218dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/left_button"
            android:contentDescription="@string/previous"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/icon_previous"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:src="@drawable/left_arrow"
            android:contentDescription="@string/left_arrow"
            app:tint="@color/shade_tertiary" />
    </FrameLayout>

    <!-- Right Navigation Button -->
    <FrameLayout
        android:id="@+id/btn_next"
        android:layout_width="88dp"
        android:layout_height="218dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/right_button"
            android:contentDescription="@string/next"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/icon_next"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:src="@drawable/right_arrow"
            android:contentDescription="@string/righ_arrow"
            app:tint="@color/shade_tertiary" />
    </FrameLayout>

    <!-- Swipe Up Container -->
    <include
        android:id="@+id/swipe_up_layout"
        layout="@layout/layout_swipe_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>