<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Check Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:enabled="false"
        android:id="@+id/btn_check"
        android:background="@drawable/bg_button_primary"
        android:layout_width="0dp"
        android:layout_height="56dp"
        style="@style/TextAppearance.Label.Medium"
        android:textColor="@color/text_button_primary"
        android:layout_marginBottom="12dp"
        android:text="@string/check"
        android:textAllCaps="false"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toTopOf="@id/btn_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Skip Button (Text Only) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_skip"
        style="@style/TextAppearance.Label.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_secondary"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Next Button (Initially Hidden) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/TextAppearance.Label.Medium"
        android:background="@drawable/bg_button_primary"
        android:textColor="@color/text_button_primary"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:visibility="gone"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>