<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Share Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/primary"
        android:text="@string/share_win_with_friends"
        android:textAppearance="@style/TextAppearance.Label.Medium"
        android:textColor="@color/on_primary"
        app:cornerRadius="28dp"
        app:icon="@drawable/ic_share"
        app:iconGravity="end"
        app:iconPadding="8dp"
        app:iconTint="@color/on_primary" />

    <!-- Bottom Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!-- Play Again Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_again"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:text="@string/play_again"
            android:textAppearance="@style/TextAppearance.Label.Medium"
            android:textColor="@color/on_primary"
            app:cornerRadius="28dp" />

        <!-- Back to Home Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_to_home"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/disable"
            android:text="@string/back_to_home"
            android:textAppearance="@style/TextAppearance.Label.Medium"
            android:textColor="@color/shade_primary"
            app:cornerRadius="28dp" />
    </LinearLayout>

</LinearLayout>